Bug 216998 - histogram color guide is not shown [patch]
Summary: histogram color guide is not shown [patch]
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Editor-Levels (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-01 23:14 UTC by Jens Mueller
Modified: 2017-08-06 09:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments
PATCH (885 bytes, application/octet-stream)
2009-12-01 23:17 UTC, Jens Mueller
Details
PATCH (886 bytes, patch)
2009-12-01 23:21 UTC, Jens Mueller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jens Mueller 2009-12-01 23:14:24 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

the histogram widget do not show the color guide anymore
Comment 1 Jens Mueller 2009-12-01 23:17:07 UTC
Created attachment 38754 [details]
PATCH

the patch solves the problem by forwarding the colorguide from histogramwidget to histogrampainter
Comment 2 Jens Mueller 2009-12-01 23:21:50 UTC
Created attachment 38755 [details]
PATCH 

sorry - there was a type in the above patch - now fixed
Comment 3 Johannes Wienke 2009-12-01 23:52:36 UTC
SVN commit 1057301 by jwienke:

Applied Jens' fix that re-enables the color guide in the histogram. Thanks for the patch.

BUG: 216998

 M  +2 -1      NEWS  
 M  +8 -0      libs/widgets/common/histogramwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1057301