Applied Jens' fix that re-enables the color guide in the histogram. Thanks for the patch.

BUG: 216998

svn path=/trunk/extragear/graphics/digikam/; revision=1057301